# resume-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: changelog.md  contributing.md  index.md  technical-paper.md  troubleshooting.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: job-search-workflow.md  master-resume-format.md
docs/reference/: commands.md  llm-backends.md  pdf-output.md  templates.md
docs/tutorials/: ats-analysis.md  batch-mode.md  import-from-linkedin.md  tailor-first-resume.md
examples/: README.md  batch-manifest.json  job-posting-frontend.txt  job-posting.txt  master-resume.md  raw-resume.txt
resume_engine/: __init__.py  batch.py  check.py  cli.py  config.py  cover_scorer.py  differ.py  doctor.py  engine.py  fit.py  importer.py  init.py  interactive.py  interview.py  linkedin.py  llm.py  optimizer.py  scorer.py  tracker.py  validate.py
src/: __init__.py  ats.py  batch.py  cli.py  engine.py  interactive.py  llm.py  pdf.py  scraper.py  templates.py
templates/: classic.md  concise.md  executive.md  technical.md
tests/: test_ats.py  test_check.py  test_cli.py  test_config.py  test_cover_scorer.py  test_differ.py  test_doctor.py  test_engine_import.py  test_fit.py  test_importer.py  test_init.py  test_interview.py  test_linkedin.py  test_optimizer.py  test_pdf.py  test_scorer.py  test_templates.py  test_tracker.py  test_validate.py
